--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,20 @@
     padding: 0;
 }
 
+html,
+body {
+    position: relative;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    min-height: 100vh;
+    background: #eee;
+    color: #777;
+}
+
+h1 {
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    font-weight: bold;
+}
+
 .container {
     width: 960px;
     margin: 0 auto;
@@ -15,6 +29,7 @@ header {
     background: #fff;
     border-bottom: 2px solid #ccc;
     color: #99a3ad;
+    height: 5.7em;
 }
 
 .header__logo {
@@ -50,20 +65,9 @@ nav ul {
     border-right: 0;
 }
 
-body {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    min-height: 100vh;
-    background: #eee;
-    color: #777;
-}
-
 main {
     position: relative;
-    min-height: 77.4vh;
-}
-
-h1 {
-    font-family: 'Georgia', Times, 'Times New Roman', serif;
+    min-height: inherit;
 }
 
 .section-about,
@@ -151,6 +155,7 @@ h1 {
 
 footer {
     position: absolute;
+    bottom: 0;
     width: 100%;
     padding: 4em 0 0.8em;
     background: #666;
