--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ h1 {
 }
 
 .container {
+    padding-bottom: 5em;
     width: 960px;
     margin: 0 auto;
 }
@@ -67,7 +68,6 @@ nav ul {
 
 main {
     position: relative;
-    min-height: inherit;
 }
 
 .section-about,
