--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,12 +112,13 @@ main {
 
 .portfolio-projects img {
     width: 20em;
+    margin-bottom: 1.8em;
 }
 
 .project__label {
     position: absolute;
     width: 98.5%;
-    bottom: 1.2em;
+    bottom: .2em;
     padding: 1em 0;
     background: #4aaaa5;
 }
@@ -173,6 +174,10 @@ footer {
         font-size: 0.95em;
     }
 
+    .section-portfolio img {
+        width: 15em;
+    }
+
     .section__title {
         font-size: 1.8em;
     }
@@ -193,6 +198,14 @@ footer {
 
     .section-about {
         font-size: 0.9em;
+    }
+
+    .section-portfolio .section__content {
+        text-align: center;
+    }
+
+    .section-portfolio img {
+        width: 100%;
     }
 
     .section__title {
